# ai-companion

./: .gitignore  README.md
backend/: Cargo.toml  chat_history.json
backend/src/: history.rs  main.rs  transcribe.rs  transcribe_stream.rs
frontend/: index.html  package.json
frontend/src/: App.jsx
